--- a/operator/pkg/apis/istio/v1alpha1/v1alpha1.pb.html
+++ b/operator/pkg/apis/istio/v1alpha1/v1alpha1.pb.html
@@ -3257,6 +3257,15 @@ No
 No
 </td>
 </tr>
+<tr id="SidecarInjectorConfig-excludeNamespaces">
+<td><code>excludeNamespaces</code></td>
+<td><code>string[]</code></td>
+<td>
+</td>
+<td>
+No
+</td>
+</tr>
 </tbody>
 </table>
 </section>
